--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "npm run build && node server",
+    "start": "npm install && npm run build && node server",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
